[gd_scene load_steps=4 format=3 uid="uid://cxm7r2h1iidrd"]

[ext_resource type="Script" uid="uid://qnaqo8pga88n" path="res://scripts/ui/hud.gd" id="1_0mwgc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mwgc"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqnrr"]
bg_color = Color(0.09239706, 0.09239707, 0.092397, 1)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_0mwgc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CoinsLbl" type="Label" parent="Control/MarginContainer/VBoxContainer/Top"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Coin Count: "

[node name="PaintingProgress" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer/Top"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
theme_override_styles/background = SubResource("StyleBoxFlat_0mwgc")
theme_override_styles/fill = SubResource("StyleBoxFlat_hqnrr")
value = 50.0
show_percentage = false

[node name="PaintingName" type="Label" parent="Control/MarginContainer/VBoxContainer/Top"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Panting Name"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Bot" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="BuySlimeBtn" type="Button" parent="Control/MarginContainer/VBoxContainer/Bot"]
unique_name_in_owner = true
layout_mode = 2
text = "Buy Slime (X coins)"

[node name="TempBuyUpgradeBtn" type="Button" parent="Control/MarginContainer/VBoxContainer/Bot"]
layout_mode = 2
text = "Buy Upgrade"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Bot/BuySlimeBtn" to="." method="_on_buy_slime_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Bot/TempBuyUpgradeBtn" to="." method="_on_temp_buy_upgrade_btn_pressed"]
